fix: Use Collectors.toList() for Java 11 compatibility
- Stream.toList() was added in Java 16
- Changed to collect(Collectors.toList()) for Java 11+ compatibility